--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
   padding: 2rem;
-  text-align: center;
+  border: 2px solid red;
 }
 
 .logo {
